# mirage-raft

./: Makefile  README.md  dune-project  mirage-raft.opam
examples/unikernel/: append_entries.ml  command.ml  config.ml  machine.ml  plog.ml  request_votes.ml  unikernel.ml
lib/: .merlin  action.ml  append_entries.ml  append_entries.mli  candidate.ml  command.ml  dune  event.ml  follower.ml  leader.ml  machine.ml  plog.ml  plog.mli  raft.ml  request_vote.ml  request_votes.ml  request_votes.mli  state.ml
test/: dune  main.ml  qcheck.ml
