(lang dune 2.4)

(strict_package_deps)

(implicit_transitive_deps false)

(name mirage-raft)

(generate_opam_files true)

(authors "Andrew Jeffery <dev@jeffas.io>")

(maintainers "Andrew Jeffery <dev@jeffas.io>")

(source
 (github jeffa5/mirage-raft))

(package
 (name mirage-raft)
 (synopsis "A raft implementation for MirageOS")
 (depends))
